--- a/index.html
+++ b/index.html
@@ -3,138 +3,250 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>X-Wallet by RiskXLabs — Web v1.3</title>
-
-  <!-- CSP: allow esm.sh (modules), your RPC/Worker, and Etherscan Sepolia for history -->
-  <meta http-equiv="Content-Security-Policy"
-        content="
-          default-src 'self';
-          script-src 'self' https://esm.sh;
-          connect-src 'self'
-                       https://eth-sepolia.g.alchemy.com
-                       https://xwalletv1dot2.agedotcom.workers.dev
-                       https://api-sepolia.etherscan.io;
-          style-src 'self' 'unsafe-inline';
-          img-src 'self' data:;
-          font-src 'self' data:;
-          base-uri 'self';
-          frame-ancestors 'none';
-        ">
-
-  <link rel="stylesheet" href="css/styles.css" />
+  <title>RiskXLabs — X-Wallet v1.5</title>
+  <meta name="theme-color" content="#071016" />
+  <link rel="preconnect" href="." />
+  <link rel="icon" href="assets/favicon.png" />
+  <link rel="stylesheet" href="styles.css" />
+  <!-- Optional: fonts (use system stack for speed) -->
 </head>
+
 <body>
-  <div class="container">
-    <!-- Top nav / brand -->
-    <div class="nav">
-      <div class="brand">
-        <span class="x">X</span> X-Wallet <span class="small">by RiskXLabs</span>
-      </div>
-      <div class="cta">
-        <button class="btn ghost" id="ctaLearn">Learn more</button>
-        <button class="btn primary" id="ctaApp">Open App</button>
-      </div>
+  <header class="rxl-header">
+    <div class="brand">
+      <!-- Use your shield+flask mark with transparent background -->
+      <img src="assets/riskxlabs-shieldflask.png" alt="RiskXLabs" class="brand-logo" />
+      <h1 class="brand-title">Risk<span class="x-accent">X</span>Labs</h1>
     </div>
 
-    <!-- Hero -->
-    <section class="hero">
-      <div>
-        <h1>SafeSend™ risk checks. Control Center. Multi-wallet. On-chain sends (Sepolia).</h1>
-        <p class="lead">
-          Create or import a wallet, unlock with a password, manage multiple derived wallets,
-          view balances & recent activity, and send ETH on Sepolia with SafeSend pre-checks.
-        </p>
-        <div class="flex">
-          <span class="badge">Sepolia testnet</span>
-          <span class="badge">Control Center</span>
-          <span class="badge">SafeSend checks</span>
+    <nav class="nav">
+      <a href="index.html" class="nav-link active">Home</a>
+      <a href="dashboard.html" class="nav-link">Dashboard</a>
+      <a href="safesend.html" class="nav-link">SafeSend</a>
+      <div class="nav-divider" aria-hidden="true"></div>
+      <div class="nav-dropdown">
+        <button class="nav-link nav-button" id="toolsBtn" aria-expanded="false" aria-controls="toolsMenu">Tools ▾</button>
+        <div id="toolsMenu" class="menu" role="menu" aria-labelledby="toolsBtn">
+          <a role="menuitem" href="examiner.html" class="menu-item">Examiner / Eagle Eye</a>
+          <a role="menuitem" href="wallet.html" class="menu-item">X-Wallet</a>
+          <a role="menuitem" href="settings.html" class="menu-item">Settings</a>
         </div>
+      </div>
+      <a href="#" id="whatsNewOpen" class="nav-link whats-new">What’s New 1.5</a>
+    </nav>
+  </header>
+
+  <main class="main">
+    <section class="hero card">
+      <div class="hero-copy">
+        <h2 class="hero-title">X-Wallet <span class="pill pill-good">v1.5</span></h2>
+        <p class="hero-subtitle">Non-custodial. Multi-chain. Built to <strong>block fraud</strong> before it happens.</p>
+        <ul class="hero-points">
+          <li>New: <strong>Multi-chain selection</strong> (Ethereum, Base, Polygon, Sepolia, more)</li>
+          <li>Expanded risk model: <strong>OFAC hard-block</strong>, <strong>Scam clusters</strong> ≥60 baseline, Phishing clusters</li>
+          <li>Cleaner hand-off to <code>app.js</code> / Worker via <code>localStorage</code></li>
+        </ul>
+      </div>
+      <div class="hero-cta">
+        <button id="enterBtn" class="btn btn-primary">Enter X-Wallet</button>
+        <p class="cta-hint">We’ll remember your selected networks and load them in the app.</p>
       </div>
     </section>
 
-    <!-- App shell -->
-    <section class="app">
-      <div class="section-title">X-Wallet (Web)</div>
-      <div class="app-grid">
-        <!-- Sidebar -->
-        <div class="card sidebar">
-          <div class="label">Navigation</div>
-          <div class="item active" data-view="dashboard">Control Center</div>
-          <div class="item" data-view="wallets">Wallets</div>
-          <div class="item" data-view="send">Send</div>
-          <!-- Messaging can be added back later -->
-          <!-- <div class="item" data-view="messaging">Messaging</div> -->
-          <div class="item" data-view="settings">Settings</div>
-          <hr class="sep" />
-          <div class="flex">
-            <div id="lockState" class="badge">Locked</div>
-            <button class="btn" id="btnLock">Lock</button>
-            <button class="btn" id="btnUnlock">Unlock</button>
+    <section class="card">
+      <h3 class="section-title">Select Networks</h3>
+
+      <!-- Quick-pick pills -->
+      <div class="net-pills" id="netPills" role="group" aria-label="Quick network select">
+        <!-- Use data-id to keep identifiers stable for app.js -->
+        <button class="pill pill-select" data-id="ethereum" aria-pressed="true">🟣 Ethereum</button>
+        <button class="pill pill-select" data-id="base" aria-pressed="true">🟦 Base</button>
+        <button class="pill pill-select" data-id="polygon" aria-pressed="true">🟪 Polygon</button>
+        <button class="pill pill-select" data-id="sepolia" aria-pressed="true">🟡 Sepolia</button>
+        <button class="pill pill-select" data-id="arbitrum" aria-pressed="false">🔵 Arbitrum</button>
+        <button class="pill pill-select" data-id="optimism" aria-pressed="false">🔴 Optimism</button>
+      </div>
+
+      <!-- Select all / none -->
+      <div class="net-bulk">
+        <button id="selectAll" class="btn btn-ghost">Select All</button>
+        <button id="selectNone" class="btn btn-ghost">Clear</button>
+      </div>
+
+      <!-- Dropdown fallback -->
+      <label class="select-label" for="networkSelect">Or choose from list</label>
+      <select class="network-select" id="networkSelect" multiple size="6" aria-describedby="netHelp">
+        <option value="ethereum" selected>Ethereum</option>
+        <option value="base" selected>Base</option>
+        <option value="polygon" selected>Polygon</option>
+        <option value="sepolia" selected>Sepolia</option>
+        <option value="arbitrum">Arbitrum</option>
+        <option value="optimism">Optimism</option>
+      </select>
+      <p id="netHelp" class="muted">Tip: hold Ctrl/Cmd to select multiple.</p>
+    </section>
+
+    <section class="card">
+      <h3 class="section-title">Risk Assessment (active in 1.5)</h3>
+      <div class="risk-grid">
+        <div class="risk-item">
+          <span class="risk-dot dot-hard"></span>
+          <div>
+            <div class="risk-name">OFAC Sanctions</div>
+            <div class="risk-note">Hard-block — transfers to listed addresses are prevented.</div>
           </div>
         </div>
-
-        <!-- Main view container -->
-        <div class="card" id="view"><!-- app.js renders here --></div>
+        <div class="risk-item">
+          <span class="risk-dot dot-high"></span>
+          <div>
+            <div class="risk-name">Scam Clusters</div>
+            <div class="risk-note">Presence sets ≥ <strong>60</strong> for that factor alone.</div>
+          </div>
+        </div>
+        <div class="risk-item">
+          <span class="risk-dot dot-med"></span>
+          <div>
+            <div class="risk-name">Phishing Clusters</div>
+            <div class="risk-note">Known phishing campaigns & look-alike routes.</div>
+          </div>
+        </div>
+        <div class="risk-item">
+          <span class="risk-dot dot-info"></span>
+          <div>
+            <div class="risk-name">Heuristics</div>
+            <div class="risk-note">Fan-in/out, mixers, age of address, risk halos, etc.</div>
+          </div>
+        </div>
       </div>
     </section>
+  </main>
 
-    <footer class="footer">© RiskXLabs — X-Wallet Web v1.3</footer>
-  </div>
+  <footer class="rxl-footer">
+    <span>© <span id="year"></span> RiskXLabs</span>
+    <span class="version-label" aria-label="version">X-Wallet v1.5</span>
+  </footer>
 
-  <!-- Lock modal -->
-  <div class="lock" id="lockModal">
-    <div class="panel">
-      <div class="label">Unlock your wallet</div>
-      <div class="small">Your secret phrase is encrypted locally. Enter your password to unlock.</div>
-      <div style="height:8px"></div>
-      <input id="unlockPassword" type="password" placeholder="Password" />
-      <div style="height:8px"></div>
-      <div class="flex">
-        <button class="btn" id="doUnlock">Unlock</button>
-        <button class="btn ghost" id="cancelUnlock">Cancel</button>
+  <!-- What's New Modal -->
+  <dialog id="whatsNew" class="modal">
+    <form method="dialog" class="modal-card card">
+      <header class="modal-header">
+        <h3>What’s New — v1.5</h3>
+        <button value="cancel" aria-label="Close" class="icon-btn">✕</button>
+      </header>
+      <div class="modal-body">
+        <ul class="whats-list">
+          <li>Multi-chain selector with quick-pick pills and multi-select list</li>
+          <li>OFAC hard-block pipeline (app/worker consume from local or remote lists)</li>
+          <li>Scam cluster baseline ≥60; phishing clusters enriched</li>
+          <li>Safer defaults, cleaner hand-off to <code>app.js</code>/<code>worker.js</code> via <code>localStorage</code></li>
+        </ul>
       </div>
-      <div class="small" id="unlockMsg"></div>
-    </div>
-  </div>
+      <footer class="modal-footer">
+        <button class="btn btn-primary" value="ok">Got it</button>
+      </footer>
+    </form>
+  </dialog>
 
-  <!-- App script (ESM) -->
-  <script type="module" src="js/app.js"></script>
-  <!-- Risk Review Modal (SafeSend) -->
-<div id="riskModal" class="modal" aria-hidden="true">
-  <div class="modal__panel">
-    <div class="modal__header">
-      <div class="label">SafeSend risk review</div>
-      <button id="riskClose" class="icon-btn" aria-label="Close">✕</button>
-    </div>
+  <!-- Minimal inline bootstrapping; main logic remains in app.js -->
+  <script>
+    (function () {
+      const VERSION = "1.5.0";
+      const STORAGE_KEY = "xw.selectedNetworks";
+      const SUPPORTED = ["ethereum","base","polygon","sepolia","arbitrum","optimism"];
 
-    <!-- Meter -->
-    <div class="risk-meter">
-      <div id="riskMeter" class="risk-meter__scale">
-        <div id="riskMeterBar" class="risk-meter__bar" style="--score:0"></div>
-      </div>
-      <div class="risk-meter__labels"><span>0</span><span>25</span><span>50</span><span>75</span><span>100</span></div>
-      <div id="riskScoreText" class="risk-meter__score">Risk score: 0</div>
-    </div>
+      const byId = (id) => document.getElementById(id);
+      const pills = document.querySelectorAll(".pill-select");
+      const select = byId("networkSelect");
+      const selectAllBtn = byId("selectAll");
+      const selectNoneBtn = byId("selectNone");
+      const enterBtn = byId("enterBtn");
+      const yearEl = byId("year");
+      const modal = byId("whatsNew");
+      const whatsOpen = byId("whatsNewOpen");
+      const toolsBtn = byId("toolsBtn");
+      const toolsMenu = byId("toolsMenu");
 
-    <!-- Factors -->
-    <div id="riskFactors" class="risk-factors small">
-      <!-- JS populates rows like:
-      <div class="factor factor--high"><span class="factor__badge">High</span><div>…reason…</div></div>
-      -->
-    </div>
+      yearEl.textContent = new Date().getFullYear();
 
-    <!-- High-risk acknowledgement -->
-    <div id="riskWarning" class="risk-warning" style="display:none">
-      This transaction has been identified by SafeSend as one involving substantial risk of being a scam or fraud.
-      The submitter understands that this is an attempt at intervention using the best available information.
-      The submitter assumes full financial responsibility for ignoring the stated risk factors.
-      <label class="checkbox"><input id="riskAgree" type="checkbox"> <span>I agree</span></label>
-    </div>
+      // Toggle pill selection
+      pills.forEach(p => {
+        p.addEventListener("click", () => {
+          const pressed = p.getAttribute("aria-pressed") === "true";
+          p.setAttribute("aria-pressed", String(!pressed));
+          p.classList.toggle("pill-selected", !pressed);
+          syncSelectFromPills();
+        });
+      });
 
-    <div class="modal__actions">
-      <button id="riskCancel" class="btn ghost">Cancel</button>
-      <button id="riskProceed" class="btn primary" disabled>Complete transaction</button>
-    </div>
-  </div>
-</div>
+      // Bulk actions
+      selectAllBtn.addEventListener("click", () => {
+        pills.forEach(p => { p.setAttribute("aria-pressed", "true"); p.classList.add("pill-selected"); });
+        syncSelectFromPills();
+      });
+      selectNoneBtn.addEventListener("click", () => {
+        pills.forEach(p => { p.setAttribute("aria-pressed", "false"); p.classList.remove("pill-selected"); });
+        syncSelectFromPills();
+      });
+
+      // Keep <select> in sync with pills
+      function syncSelectFromPills() {
+        const chosen = getChosenFromPills();
+        Array.from(select.options).forEach(opt => {
+          opt.selected = chosen.includes(opt.value);
+        });
+      }
+      function getChosenFromPills() {
+        return Array.from(pills)
+          .filter(p => p.getAttribute("aria-pressed") === "true")
+          .map(p => p.dataset.id)
+          .filter(v => SUPPORTED.includes(v));
+      }
+
+      // If user changes the select, reflect in pills
+      select.addEventListener("change", () => {
+        const chosen = Array.from(select.selectedOptions).map(o => o.value);
+        pills.forEach(p => {
+          const on = chosen.includes(p.dataset.id);
+          p.setAttribute("aria-pressed", String(on));
+          p.classList.toggle("pill-selected", on);
+        });
+      });
+
+      // Persist and launch
+      enterBtn.addEventListener("click", () => {
+        const selected = getChosenFromPills();
+        localStorage.setItem(STORAGE_KEY, JSON.stringify(selected));
+        localStorage.setItem("xw.version", VERSION);
+
+        // Optional: pass along via query too (helps with debugging)
+        const next = "app.html"; // change to your actual entry if different
+        const qs = new URLSearchParams({ nets: selected.join(","), v: VERSION });
+        window.location.href = `${next}?${qs.toString()}`;
+      });
+
+      // Tools dropdown (no framework)
+      toolsBtn.addEventListener("click", () => {
+        const expanded = toolsBtn.getAttribute("aria-expanded") === "true";
+        toolsBtn.setAttribute("aria-expanded", String(!expanded));
+        toolsMenu.classList.toggle("open", !expanded);
+      });
+      document.addEventListener("click", (e) => {
+        if (!toolsBtn.contains(e.target) && !toolsMenu.contains(e.target)) {
+          toolsBtn.setAttribute("aria-expanded", "false");
+          toolsMenu.classList.remove("open");
+        }
+      });
+
+      // What's New modal
+      whatsOpen.addEventListener("click", (e) => {
+        e.preventDefault();
+        if (typeof modal.showModal === "function") modal.showModal();
+        else modal.setAttribute("open", "open");
+      });
+    })();
+  </script>
+
+  <!-- Your main bundle (kept as-is) -->
+  <script src="app.js" defer></script>
 </body>
+</html>
