--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#071016" />
   <link rel="preconnect" href="." />
   <link rel="icon" href="assets/favicon.png" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="agethejedi.github.io/Xwallet1.5/css/styles.css" />
   <!-- Optional: fonts (use system stack for speed) -->
 </head>
 
