--- a/index.html
+++ b/index.html
@@ -247,6 +247,6 @@
   </script>
 
   <!-- Your main bundle (kept as-is) -->
-  <script src="app.js" defer></script>
+  <script type="module" src="app.js"></script>
 </body>
 </html>
