--- a/index.html
+++ b/index.html
@@ -3,16 +3,22 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>X-Wallet by RiskXLabs — Web v1.5</title>
+  <title>X-Wallet by RiskXLabs — Web v1.5 (1.4 layout)</title>
 
-  <!-- CSP: allow esm.sh (modules), your Worker, and Alchemy (multi-chain) -->
+  <!-- CSP: esm.sh (modules), your RPC/Worker, and Etherscan for links -->
   <meta http-equiv="Content-Security-Policy"
         content="
           default-src 'self';
           script-src 'self' https://esm.sh;
           connect-src 'self'
-                       https://*.g.alchemy.com
-                       https://xwalletv1dot2.agedotcom.workers.dev;
+                       https://eth-mainnet.g.alchemy.com
+                       https://eth-sepolia.g.alchemy.com
+                       https://base-mainnet.g.alchemy.com
+                       https://polygon-mainnet.g.alchemy.com
+                       https://arb-mainnet.g.alchemy.com
+                       https://opt-mainnet.g.alchemy.com
+                       https://xwalletv1dot2.agedotcom.workers.dev
+                       https://xwalletv1dot2.agedotcom.workers.dev/;
           style-src 'self' 'unsafe-inline';
           img-src 'self' data:;
           font-src 'self' data:;
@@ -20,39 +26,39 @@
           frame-ancestors 'none';
         ">
 
-  <!-- Your existing 1.4 stylesheet works; you said you'll tune it for 1.5 -->
+  <link rel="icon" href="assets/favicon.png" />
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
   <div class="container">
-    <!-- Top nav / brand -->
+    <!-- Top bar / brand (simple, same as 1.4) -->
     <div class="nav">
       <div class="brand">
         <span class="x">X</span> X-Wallet <span class="small">by RiskXLabs</span>
       </div>
       <div class="cta">
-        <button class="btn ghost" id="ctaLearn">Learn more</button>
-        <button class="btn primary" id="ctaApp">Open App</button>
+        <span class="badge">Multi-chain</span>
+        <span class="badge">SafeSend</span>
       </div>
     </div>
 
-    <!-- Hero -->
+    <!-- Hero copy (kept compact, as in 1.4) -->
     <section class="hero">
       <div>
-        <h1>SafeSend™ risk checks. Control Center. Multi-wallet. Multi-chain.</h1>
+        <h1>SafeSend™ risk checks. Control Center. Multi-wallet. On-chain sends.</h1>
         <p class="lead">
-          Create or import a wallet, unlock with a password, manage multiple derived wallets,
+          Create/import a wallet, unlock with a password, manage derived wallets,
           view balances & recent activity, and send ETH with SafeSend pre-checks.
         </p>
         <div class="flex">
-          <span class="badge">Multi-chain</span>
-          <span class="badge">Control Center</span>
-          <span class="badge">SafeSend checks</span>
+          <span class="badge">Sepolia testnet</span>
+          <span class="badge">Ethereum / Base / Polygon</span>
+          <span class="badge">Risk scoring</span>
         </div>
       </div>
     </section>
 
-    <!-- App shell -->
+    <!-- App shell (exactly the 1.4 structure) -->
     <section class="app">
       <div class="section-title">X-Wallet (Web)</div>
       <div class="app-grid">
@@ -64,19 +70,6 @@
           <div class="item" data-view="send">Send</div>
           <div class="item" data-view="settings">Settings</div>
           <hr class="sep" />
-
-          <div class="label">Network</div>
-          <select id="networkSelect">
-            <option value="ethereum">Ethereum (Mainnet)</option>
-            <option value="base">Base</option>
-            <option value="polygon">Polygon</option>
-            <option value="arbitrum">Arbitrum</option>
-            <option value="optimism">Optimism</option>
-            <option value="sepolia" selected>Sepolia (Testnet)</option>
-          </select>
-          <div class="small">Used for balances, history, and SafeSend.</div>
-          <hr class="sep" />
-
           <div class="flex">
             <div id="lockState" class="badge">Locked</div>
             <button class="btn" id="btnLock">Lock</button>
@@ -84,7 +77,7 @@
           </div>
         </div>
 
-        <!-- Main view container -->
+        <!-- Main view container (app.js renders) -->
         <div class="card" id="view"><!-- app.js renders here --></div>
       </div>
     </section>
@@ -92,8 +85,8 @@
     <footer class="footer">© RiskXLabs — X-Wallet Web v1.5</footer>
   </div>
 
-  <!-- Lock modal -->
-  <div class="lock" id="lockModal">
+  <!-- Unlock modal (single instance) -->
+  <div class="lock" id="lockModal" aria-hidden="true">
     <div class="panel">
       <div class="label">Unlock your wallet</div>
       <div class="small">Your secret phrase is encrypted locally. Enter your password to unlock.</div>
