--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>X-Wallet by RiskXLabs — Web v1.5 (1.4 layout)</title>
 
-  <!-- CSP: esm.sh (modules), your RPC/Worker, and Etherscan for links -->
+  <!-- CSP: esm.sh (modules), your RPC/Worker; Etherscan only for links -->
   <meta http-equiv="Content-Security-Policy"
         content="
           default-src 'self';
@@ -31,7 +31,7 @@
 </head>
 <body>
   <div class="container">
-    <!-- Top bar / brand (simple, same as 1.4) -->
+    <!-- Top bar / brand -->
     <div class="nav">
       <div class="brand">
         <span class="x">X</span> X-Wallet <span class="small">by RiskXLabs</span>
@@ -42,7 +42,7 @@
       </div>
     </div>
 
-    <!-- Hero copy (kept compact, as in 1.4) -->
+    <!-- Hero -->
     <section class="hero">
       <div>
         <h1>SafeSend™ risk checks. Control Center. Multi-wallet. On-chain sends.</h1>
@@ -58,7 +58,7 @@
       </div>
     </section>
 
-    <!-- App shell (exactly the 1.4 structure) -->
+    <!-- App shell -->
     <section class="app">
       <div class="section-title">X-Wallet (Web)</div>
       <div class="app-grid">
@@ -75,9 +75,25 @@
             <button class="btn" id="btnLock">Lock</button>
             <button class="btn" id="btnUnlock">Unlock</button>
           </div>
+
+          <!-- NEW: Network selector (v1.5) -->
+          <div class="net-select">
+            <div class="label small">Network</div>
+            <select id="netSelect">
+              <option value="ethereum">Ethereum</option>
+              <option value="base">Base</option>
+              <option value="polygon">Polygon</option>
+              <option value="arbitrum">Arbitrum</option>
+              <option value="optimism">Optimism</option>
+              <option value="sepolia">Sepolia</option>
+            </select>
+            <div class="small" style="margin-top:6px;color:var(--muted)">
+              Used for balances, history & sends.
+            </div>
+          </div>
         </div>
 
-        <!-- Main view container (app.js renders) -->
+        <!-- Main view container -->
         <div class="card" id="view"><!-- app.js renders here --></div>
       </div>
     </section>
@@ -85,7 +101,7 @@
     <footer class="footer">© RiskXLabs — X-Wallet Web v1.5</footer>
   </div>
 
-  <!-- Unlock modal (single instance) -->
+  <!-- Unlock modal -->
   <div class="lock" id="lockModal" aria-hidden="true">
     <div class="panel">
       <div class="label">Unlock your wallet</div>
@@ -109,7 +125,6 @@
         <button id="riskClose" class="icon-btn" aria-label="Close">✕</button>
       </div>
 
-      <!-- Meter -->
       <div class="risk-meter">
         <div id="riskMeter" class="risk-meter__scale">
           <div id="riskMeterBar" class="risk-meter__bar" style="--score:0"></div>
@@ -118,10 +133,8 @@
         <div id="riskScoreText" class="risk-meter__score">Risk score: 0</div>
       </div>
 
-      <!-- Factors -->
       <div id="riskFactors" class="risk-factors small"></div>
 
-      <!-- High-risk acknowledgement -->
       <div id="riskWarning" class="risk-warning" style="display:none">
         This transaction has been identified by SafeSend as one involving substantial risk of being a scam or fraud.
         The submitter understands that this is an attempt at intervention using the best available information.
@@ -135,6 +148,26 @@
       </div>
     </div>
   </div>
+
+  <!-- Minimal bootstrapping for network select -->
+  <script>
+    (function(){
+      const KEY = "xw.selectedNetworks";
+      const el  = document.getElementById("netSelect");
+      try {
+        const stored = JSON.parse(localStorage.getItem(KEY) || '["sepolia"]');
+        const cur = Array.isArray(stored) && stored[0] ? stored[0] : "sepolia";
+        el.value = cur;
+      } catch { el.value = "sepolia"; }
+
+      el.addEventListener("change", () => {
+        const val = el.value || "sepolia";
+        localStorage.setItem(KEY, JSON.stringify([val]));
+        // Optional: let app.js update provider immediately if it listens.
+        window.dispatchEvent(new CustomEvent("xw:networkChanged", { detail: val }));
+      });
+    })();
+  </script>
 
   <!-- App script (ESM) -->
   <script type="module" src="js/app.js"></script>
