--- a/index.html
+++ b/index.html
@@ -3,22 +3,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>X-Wallet by RiskXLabs — Web v1.5 (1.4 layout)</title>
+  <title>X-Wallet by RiskXLabs — Web v1.5</title>
 
-  <!-- CSP: esm.sh (modules), your RPC/Worker; Etherscan only for links -->
+  <!-- CSP: esm modules, Alchemy (any network), and your SafeSend worker -->
   <meta http-equiv="Content-Security-Policy"
         content="
           default-src 'self';
           script-src 'self' https://esm.sh;
-          connect-src 'self'
-                       https://eth-mainnet.g.alchemy.com
-                       https://eth-sepolia.g.alchemy.com
-                       https://base-mainnet.g.alchemy.com
-                       https://polygon-mainnet.g.alchemy.com
-                       https://arb-mainnet.g.alchemy.com
-                       https://opt-mainnet.g.alchemy.com
-                       https://xwalletv1dot2.agedotcom.workers.dev
-                       https://xwalletv1dot2.agedotcom.workers.dev/;
+          connect-src 'self' https://*.g.alchemy.com https://xwalletv1dot2.agedotcom.workers.dev;
           style-src 'self' 'unsafe-inline';
           img-src 'self' data:;
           font-src 'self' data:;
@@ -26,39 +18,45 @@
           frame-ancestors 'none';
         ">
 
-  <link rel="icon" href="assets/favicon.png" />
+  <!-- Your existing stylesheet (keeps v1.4 aesthetic) -->
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
   <div class="container">
-    <!-- Top bar / brand -->
-    <div class="nav">
+    <!-- Top nav / brand -->
+    <div class="nav" style="display:flex;align-items:center;justify-content:space-between;margin-bottom:16px">
       <div class="brand">
-        <span class="x">X</span> X-Wallet <span class="small">by RiskXLabs</span>
+        <span class="x" style="color:#22d3ee;margin-right:6px">X</span>
+        X-Wallet <span class="small">by RiskXLabs</span>
       </div>
-      <div class="cta">
-        <span class="badge">Multi-chain</span>
-        <span class="badge">SafeSend</span>
+      <div class="cta" style="display:flex;align-items:center;gap:8px">
+        <!-- Network selector -->
+        <label for="networkSelect" class="small" style="margin-right:4px">Network</label>
+        <select id="networkSelect" style="min-width:160px">
+          <!-- app.js fills and selects current -->
+        </select>
+        <button class="btn ghost" id="ctaLearn">Learn more</button>
+        <button class="btn primary" id="ctaApp">Open App</button>
       </div>
     </div>
 
     <!-- Hero -->
-    <section class="hero">
+    <section class="hero card">
       <div>
-        <h1>SafeSend™ risk checks. Control Center. Multi-wallet. On-chain sends.</h1>
+        <h1>SafeSend™ risk checks. Control Center. Multi-wallet. On-chain sends (multi-network).</h1>
         <p class="lead">
-          Create/import a wallet, unlock with a password, manage derived wallets,
-          view balances & recent activity, and send ETH with SafeSend pre-checks.
+          Create or import a wallet, unlock with a password, manage multiple derived wallets,
+          view balances & recent activity, and send with SafeSend pre-checks.
         </p>
         <div class="flex">
-          <span class="badge">Sepolia testnet</span>
-          <span class="badge">Ethereum / Base / Polygon</span>
-          <span class="badge">Risk scoring</span>
+          <span class="badge">Multi-network</span>
+          <span class="badge">Control Center</span>
+          <span class="badge">SafeSend checks</span>
         </div>
       </div>
     </section>
 
-    <!-- App shell -->
+    <!-- App shell (v1.4 layout) -->
     <section class="app">
       <div class="section-title">X-Wallet (Web)</div>
       <div class="app-grid">
@@ -75,22 +73,6 @@
             <button class="btn" id="btnLock">Lock</button>
             <button class="btn" id="btnUnlock">Unlock</button>
           </div>
-
-          <!-- NEW: Network selector (v1.5) -->
-          <div class="net-select">
-            <div class="label small">Network</div>
-            <select id="netSelect">
-              <option value="ethereum">Ethereum</option>
-              <option value="base">Base</option>
-              <option value="polygon">Polygon</option>
-              <option value="arbitrum">Arbitrum</option>
-              <option value="optimism">Optimism</option>
-              <option value="sepolia">Sepolia</option>
-            </select>
-            <div class="small" style="margin-top:6px;color:var(--muted)">
-              Used for balances, history & sends.
-            </div>
-          </div>
         </div>
 
         <!-- Main view container -->
@@ -101,8 +83,8 @@
     <footer class="footer">© RiskXLabs — X-Wallet Web v1.5</footer>
   </div>
 
-  <!-- Unlock modal -->
-  <div class="lock" id="lockModal" aria-hidden="true">
+  <!-- Lock modal -->
+  <div class="lock" id="lockModal">
     <div class="panel">
       <div class="label">Unlock your wallet</div>
       <div class="small">Your secret phrase is encrypted locally. Enter your password to unlock.</div>
@@ -125,6 +107,7 @@
         <button id="riskClose" class="icon-btn" aria-label="Close">✕</button>
       </div>
 
+      <!-- Meter -->
       <div class="risk-meter">
         <div id="riskMeter" class="risk-meter__scale">
           <div id="riskMeterBar" class="risk-meter__bar" style="--score:0"></div>
@@ -133,8 +116,10 @@
         <div id="riskScoreText" class="risk-meter__score">Risk score: 0</div>
       </div>
 
+      <!-- Factors -->
       <div id="riskFactors" class="risk-factors small"></div>
 
+      <!-- High-risk acknowledgement -->
       <div id="riskWarning" class="risk-warning" style="display:none">
         This transaction has been identified by SafeSend as one involving substantial risk of being a scam or fraud.
         The submitter understands that this is an attempt at intervention using the best available information.
@@ -148,26 +133,6 @@
       </div>
     </div>
   </div>
-
-  <!-- Minimal bootstrapping for network select -->
-  <script>
-    (function(){
-      const KEY = "xw.selectedNetworks";
-      const el  = document.getElementById("netSelect");
-      try {
-        const stored = JSON.parse(localStorage.getItem(KEY) || '["sepolia"]');
-        const cur = Array.isArray(stored) && stored[0] ? stored[0] : "sepolia";
-        el.value = cur;
-      } catch { el.value = "sepolia"; }
-
-      el.addEventListener("change", () => {
-        const val = el.value || "sepolia";
-        localStorage.setItem(KEY, JSON.stringify([val]));
-        // Optional: let app.js update provider immediately if it listens.
-        window.dispatchEvent(new CustomEvent("xw:networkChanged", { detail: val }));
-      });
-    })();
-  </script>
 
   <!-- App script (ESM) -->
   <script type="module" src="js/app.js"></script>
