--- a/index.html
+++ b/index.html
@@ -18,23 +18,18 @@
           frame-ancestors 'none';
         ">
 
-  <!-- Your existing stylesheet (keeps v1.4 aesthetic) -->
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
   <div class="container">
     <!-- Top nav / brand -->
-    <div class="nav" style="display:flex;align-items:center;justify-content:space-between;margin-bottom:16px">
+    <div class="nav">
       <div class="brand">
-        <span class="x" style="color:#22d3ee;margin-right:6px">X</span>
-        X-Wallet <span class="small">by RiskXLabs</span>
+        <span class="x">X</span> X-Wallet <span class="small">by RiskXLabs</span>
       </div>
-      <div class="cta" style="display:flex;align-items:center;gap:8px">
-        <!-- Network selector -->
-        <label for="networkSelect" class="small" style="margin-right:4px">Network</label>
-        <select id="networkSelect" style="min-width:160px">
-          <!-- app.js fills and selects current -->
-        </select>
+      <div class="cta flex">
+        <label for="networkSelect" class="small">Network</label>
+        <select id="networkSelect" style="min-width:180px"></select>
         <button class="btn ghost" id="ctaLearn">Learn more</button>
         <button class="btn primary" id="ctaApp">Open App</button>
       </div>
@@ -56,7 +51,7 @@
       </div>
     </section>
 
-    <!-- App shell (v1.4 layout) -->
+    <!-- App shell -->
     <section class="app">
       <div class="section-title">X-Wallet (Web)</div>
       <div class="app-grid">
@@ -80,7 +75,7 @@
       </div>
     </section>
 
-    <footer class="footer">© RiskXLabs — X-Wallet Web v1.5</footer>
+    <footer class="small" style="margin-top:18px;color:var(--muted)">© RiskXLabs — X-Wallet Web v1.5</footer>
   </div>
 
   <!-- Lock modal -->
