--- a/index.html
+++ b/index.html
@@ -130,6 +130,6 @@
   </div>
 
   <!-- App script (ESM) -->
-  <script type="module" src="js/app.js"></script>
+  <script type="module" crossorigin src="js/app.js"></script>
 </body>
 </html>
