--- a/frontend/js/index.html
+++ b/frontend/js/index.html
@@ -1,24 +1,26 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>X‑Wallet by RiskXLabs — Web v1.2</title>
-<link rel="stylesheet" href="css/styles.css"/>
-<script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
-<script type="module">
-  import { ethers } from 'https://esm.sh/ethers@6.13.2';
-  window.ethers = ethers;
-</script>
-<script type="module">
-  import { Client } from 'https://esm.sh/@xmtp/xmtp-js@11.5.0';
-  window.XMTP = { Client };
-</script>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>X-Wallet by RiskXLabs — Web v1.5.3</title>
+  <link rel="stylesheet" href="css/styles.css"/>
+
+  <!-- libs -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
+  <script type="module">
+    import { ethers } from 'https://esm.sh/ethers@6.13.2';
+    window.ethers = ethers;
+  </script>
+  <script type="module">
+    import { Client } from 'https://esm.sh/@xmtp/xmtp-js@11.5.0';
+    window.XMTP = { Client };
+  </script>
 </head>
 <body>
   <div class="container">
     <div class="nav">
-      <div class="brand"><span class="x">X</span> X‑Wallet <span class="small">by RiskXLabs</span></div>
+      <div class="brand"><span class="x">X</span> X-Wallet <span class="small">by RiskXLabs</span></div>
       <div class="cta">
         <button class="btn ghost" id="ctaLearn">Learn more</button>
         <button class="btn primary" id="ctaApp">Open App</button>
@@ -27,9 +29,9 @@
 
     <section class="hero">
       <div>
-        <h1>SafeSend™ risk checks. E2EE messaging. Live markets. On‑chain sends (Sepolia).</h1>
-        <p class="lead">Create or import a wallet, unlock with a password, message via XMTP, and send ETH on Sepolia with SafeSend pre‑checks.</p>
-        <div class="flex"><span class="badge">Sepolia testnet ready</span><span class="badge">XMTP chat</span><span class="badge">SafeSend checks</span></div>
+        <h1>SafeSend™ risk checks. E2EE messaging. Live markets. On-chain sends (Sepolia).</h1>
+        <p class="lead">Create or import a wallet, unlock with a password, chat via XMTP, and send ETH on Sepolia with SafeSend pre-checks.</p>
+        <div class="flex"><span class="badge">Sepolia testnet</span><span class="badge">XMTP chat</span><span class="badge">SafeSend checks</span></div>
       </div>
       <div class="card">
         <div class="label">Market glance (live)</div>
@@ -40,12 +42,12 @@
           <div class="card chart-card"><header><b>MATIC</b></header><div class="chart-wrap" style="height:120px"><canvas id="mk_matic"></canvas></div></div>
           <div class="card chart-card"><header><b>USDC</b></header><div class="chart-wrap" style="height:120px"><canvas id="mk_usdc"></canvas></div></div>
         </div>
-        <div class="small">Data via CoinGecko (client-side). For production, proxy via backend.</div>
+        <div class="small">Data via CoinGecko (client-side). For prod, proxy via backend.</div>
       </div>
     </section>
 
     <section class="app">
-      <div class="section-title">X‑Wallet (Web)</div>
+      <div class="section-title">X-Wallet (Web)</div>
       <div class="app-grid">
         <div class="card sidebar">
           <div class="label">Navigation</div>
@@ -62,7 +64,7 @@
       </div>
     </section>
 
-    <footer class="footer">© RiskXLabs — X‑Wallet Web v1.2</footer>
+    <footer class="footer">© RiskXLabs — X-Wallet Web v1.5.3</footer>
   </div>
 
   <!-- Lock modal -->
@@ -78,6 +80,7 @@
     </div>
   </div>
 
-<script type="module" src="js/app.js"></script>
+  <!-- One script only (cache-busted) -->
+  <script type="module" src="js/app.js?v=1.5.3"></script>
 </body>
 </html>
